# libsvdrp

./: .hgignore  Makefile.am  README  autogen.sh  configure.ac  doxygen.am  doxygen.cfg.in  libsvdrp.pc.in
src/lib/: Makefile.am  logs.c  logs.h  svdrp.c  svdrp.h  svdrp_internals.c  svdrp_internals.h  utils.c  utils.h
